--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,8 @@
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
     "rxjs": "~7.8.0",
+    "survey-angular-ui": "^2.3.12",
+    "survey-core": "^2.3.12",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
   },
